...
        BIOMETRIC_STRONG
    }

suspend fun showBiometricPromptWithCrypto(
    activity: FragmentActivity,
    cryptoObject: BiometricPrompt.CryptoObject,
    title: String = "Authenticate",
    subtitle: String = "Unlock pass.android to continue",
) = suspendCancellableCoroutine<BiometricPrompt.AuthenticationResult> { cont ->
    val executor = ContextCompat.getMainExecutor(activity)
    val prompt =
        BiometricPrompt(
            activity,
...
